# solchip8

./: .gas-snapshot  .gitignore  .gitmodules  Emuabi.json  README.md  foundry.toml
desktop/: Cargo.toml  README.md
desktop/src/: main.rs
script/: Emu.s.sol  Solchip8.s.sol
src/: Emu.sol  Solchip8.sol
test/: Emu.t.sol  Solchip8.t.sol
tui/: Cargo.toml
tui/src/: main.rs
