[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec = "1.0.1"
sdl2 = "^0.34.3"
alloy = { version = "=0.5.4", features = [
    "full",
    "node-bindings",
    "rpc-types-debug",
    "rpc-types-trace",
    "json-rpc",
    "rpc-client",
    "signer-aws",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
    "eips",
] }
tokio = { version = "1", features = ["full"] }
